package br.com.fiap.challengeClyvo.enums;

public enum StatusAgendamento {
    AGENDADO,
    REALIZADO,
    CANCELADO
}
