package br.com.fiap.challengeClyvo.model;

import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
import jakarta.persistence.*;
import jakarta.validation.constraints.NotBlank;
import jakarta.validation.constraints.Size;


@Entity
@Table(name = "TB_VET")
@JsonIgnoreProperties(value = {"hibernateLazyInitializer", "handler"}, ignoreUnknown = true)
public class Veterinario {


    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY, generator = "vet_seq")
    @Column(name = "ID_VET")
    private Long id;

    @NotBlank(message = "O Nome é obrigatorio")
    @Size(min = 3, max = 70, message = "O nome deve ter entre 3 e 70 caracteres")
    @Column(name = "NOME")
    private String nome;

    @NotBlank(message = "A área de atuação e obrigatória")
    @Size(min = 3, max = 40)
    @Column(name = "AREA")
    private String area;

    // Inicio da Identidade/CRMV | Procurando por maneira de deixar com uma formatacao melhor
    @Column(name = "CRMV", unique = true, nullable = false, comment = "O CRMV é obrigatório no seguinte formato: CRMV-SP 12345/MV")
    @Embedded
    private Crmv crmv;

    public Veterinario(Long id, String nome, String area, Crmv crmv) {
        this.id = id;
        this.nome = nome;
        this.area = area;
        this.crmv = crmv;
    }

    public Veterinario() {
    }

    public Long getId() {
        return id;
    }
    public void setId(Long id) {
        this.id = id;
    }

    public String getNome() {
        return nome;
    }
    public void setNome(String nome) {
        this.nome = nome;
    }

    public String getArea() {
        return area;
    }
    public void setArea(String area) {
        this.area = area;
    }

    public Crmv getCrmv() {
        return crmv;
    }
    public void setCrmv(Crmv crmv) {
        this.crmv = crmv;
    }
}
